# ENATool

./: README.md  pyproject.toml  setup.py
ENATool/: __init__.py  api_urls.py  cli.py  extract_samples_info.py  html_templates.py  safe_samples_downloader.py
examples/: examples_usage.py
examples/PRJNA335681/: PRJNA335681.csv  PRJNA335681.html
tests/: test_cli.py
