[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ENATool"
version = "2.0.0"
description = "Comprehensive tool for downloading and managing ENA sequencing data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "P.Tikhonova", email = "tikhonova.polly@mail.ru"}
]
requires-python = ">=3.7"
keywords = ["bioinformatics", "sequencing", "ENA", "FASTQ", "download", "metadata", "genomics"]

dependencies = [
    "pandas>=0.23.4",
    "requests>=2.20.0",
    "tqdm>=4.0.0",
    "numpy>=1.15.0",
    "xmltodict>=0.12.0",
    "lxml>=4.0.0"
]

classifiers = [
    # Intended audience
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    
    # Topic
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    
    # License
    "License :: OSI Approved :: MIT License",
    
    # Python versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    
    # OS
    "Operating System :: OS Independent",
    
    # Other
    "Natural Language :: English",
]

[project.urls]
Homepage = "https://github.com/PollyTikhonova/ENATool"
Repository = "https://github.com/PollyTikhonova/ENATool"
Documentation = "https://github.com/PollyTikhonova/ENATool#readme"
"Bug Reports" = "https://github.com/PollyTikhonova/ENATool/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.9",
]

[project.scripts]
enatool = "ENATool.cli:main"

[tool.setuptools]
packages = ["ENATool"]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
ENATool = ["*.md"]
